Better button styling to ensure text doesn’t wrap

--- a/src/embedfs/static/src.css
+++ b/src/embedfs/static/src.css
@@ -38,9 +38,9 @@
 }
 
 @utility btn-common {
-  @apply px-4 py-1 rounded-3xl
+  @apply px-4 py-1 rounded-3xl inline-block
     cursor-pointer disabled:cursor-not-allowed
-    text-sm font-semibold transition-all
+    font-display font-semibold whitespace-nowrap transition-all
     disabled:border-0
     disabled:bg-linear-to-br disabled:from-gray-100 disabled:to-gray-200 disabled:text-gray-400
       disabled:dark:from-gray-800 disabled:dark:to-gray-900 disabled:dark:text-gray-600
